--- a/ribuzz/src/app/globals.css
+++ b/ribuzz/src/app/globals.css
@@ -1,33 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+font-family: 'Poppins', sans-serif;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* -----> Estilos para la barra de desplazamiento <----- */
+
+::-webkit-scrollbar {
+    width: 10px; 
 }
+
+::-webkit-scrollbar-track {
+    background: rgb(50, 50, 50);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(123, 123, 123); 
+    border-radius: 10px;
+}
+
+/* -----> **************************************** <----- */
+
+/* Cursor para links del footer (TEMPORAL) */
+
+.cursor-pointer-custom {
+    cursor: pointer;
+}
+
+/* -----> **************************************** <----- */
