Page 1, 2 y 3 de About Creadas

--- a/ribuzz/src/app/globals.css
+++ b/ribuzz/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-body {
+*body {
 font-family: 'Poppins', sans-serif;
 }
 
